Spacing changed, fixed carousel format.

--- a/public/style.css
+++ b/public/style.css
@@ -51,14 +51,21 @@ body {
 }
 
 .section {
-    margin-top: 200px;
+    margin-top: 500px;
     width: 100%;
     margin-bottom: 0px;
 }
 
-.content-container, .projects-section-container, .contact-content-container {
+.content-container, .contact-content-container {
     background-color: white;
     max-width: 1600px;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.projects-section-container {
+    background-color: white;
+    max-width: 2000px;
     margin: 0 auto;
     padding: 0;
 }
@@ -73,6 +80,18 @@ body {
     font-size: 3rem;
     padding: 0;
     margin: 0;
+}
+
+.projects-header, .projects-subtitle {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
+.projects-subtitle {
+    font-size: 2.5rem;
+    padding: 0;
+    padding-bottom: 15px;
+    padding-top: 5px;
 }
 
 .page-subtitle {
@@ -91,8 +110,8 @@ body {
 
 .test-project-card {
     width: 100%;
-    height: 300px;
-    min-width: 500px;
+    height: 400px;
+    min-width: 600px;
     margin: 0 auto;
     padding: 20px;
     background-color: lightgray;
